--- a/campaigns/environment.html
+++ b/campaigns/environment.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Tue Jun 16 2020 00:34:11 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Tue Jun 16 2020 03:19:10 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5ee3c8fd1dd92d20eba87b26" data-wf-site="5e30eecf2c9656b33936eb65">
 <head>
   <meta charset="utf-8">
@@ -55,7 +55,7 @@ fbq('track', 'PageView');
                 <div class="icon w-icon-dropdown-toggle"></div>
                 <div class="text-block">Our Campaigns</div>
               </div>
-              <nav class="dropdown-list w-dropdown-list"><a href="../campaigns/student-reps.html" class="dropdown-link w-dropdown-link">Student Reps</a><a href="../campaigns/vote16.html" class="dropdown-link w-dropdown-link">#Vote16BC</a><a href="../campaigns/environment.html" aria-current="page" class="dropdown-link w-dropdown-link w--current">Environment</a><a href="../campaigns/mental-health.html" class="dropdown-link w-dropdown-link">Mental Health</a></nav>
+              <nav class="dropdown-list w-dropdown-list"><a href="../campaigns/student-reps.html" class="dropdown-link w-dropdown-link">Student Reps</a><a href="../campaigns/environment.html" aria-current="page" class="dropdown-link w-dropdown-link w--current">Environment</a><a href="../campaigns/mental-health.html" class="dropdown-link w-dropdown-link">Mental Health</a></nav>
             </div><a href="../donate.html" target="_blank" class="nav-link w-nav-link">Donate</a><a href="https://blog.bcyouthcouncil.ca" target="_blank" class="nav-link w-nav-link">Blog</a><a href="https://bcyouthcouncil.typeform.com/to/knkHje" target="_blank" class="nav-link w-nav-link">Contact Us</a></nav>
           <div class="menu-button w-nav-button">
             <div class="menu-icon w-icon-nav-menu"></div>
