--- a/campaigns/environment.html
+++ b/campaigns/environment.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Tue Jun 16 2020 03:19:10 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Tue Jun 23 2020 22:07:22 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5ee3c8fd1dd92d20eba87b26" data-wf-site="5e30eecf2c9656b33936eb65">
 <head>
   <meta charset="utf-8">
@@ -55,7 +55,7 @@ fbq('track', 'PageView');
                 <div class="icon w-icon-dropdown-toggle"></div>
                 <div class="text-block">Our Campaigns</div>
               </div>
-              <nav class="dropdown-list w-dropdown-list"><a href="../campaigns/student-reps.html" class="dropdown-link w-dropdown-link">Student Reps</a><a href="../campaigns/environment.html" aria-current="page" class="dropdown-link w-dropdown-link w--current">Environment</a><a href="../campaigns/mental-health.html" class="dropdown-link w-dropdown-link">Mental Health</a></nav>
+              <nav class="dropdown-list w-dropdown-list"><a href="../campaigns/student-reps.html" class="dropdown-link w-dropdown-link">Student Reps</a><a href="../campaigns/environment.html" aria-current="page" class="dropdown-link w-dropdown-link w--current">Environment</a><a href="../campaigns/mental-health.html" class="dropdown-link w-dropdown-link">Mental Health</a><a href="../campaigns/brand-ambassadors.html" class="dropdown-link w-dropdown-link">Brand Ambassadors</a></nav>
             </div><a href="../donate.html" target="_blank" class="nav-link w-nav-link">Donate</a><a href="https://blog.bcyouthcouncil.ca" target="_blank" class="nav-link w-nav-link">Blog</a><a href="https://bcyouthcouncil.typeform.com/to/knkHje" target="_blank" class="nav-link w-nav-link">Contact Us</a></nav>
           <div class="menu-button w-nav-button">
             <div class="menu-icon w-icon-nav-menu"></div>
@@ -79,11 +79,11 @@ fbq('track', 'PageView');
         <div class="person-name">Fallon O&#x27;Neill</div>
         <div class="person-position">Founder</div>
       </div>
-      <div id="w-node-d8b2242c1d3a-eba87b26" data-w-id="0e705e30-0493-b78d-fdcd-d8b2242c1d3a" style="opacity:0" class="enviro-person-block"><img src="../images/IMG_0683.JPG" width="195" alt="Photo of Aiden Mitchell" srcset="../images/IMG_0683-p-500.jpeg 500w, ../images/IMG_0683-p-800.jpeg 800w, ../images/IMG_0683-p-1080.jpeg 1080w, ../images/IMG_0683.JPG 3024w" sizes="(max-width: 991px) 195px, 100vw" class="image-5">
+      <div id="w-node-d8b2242c1d3a-eba87b26" data-w-id="0e705e30-0493-b78d-fdcd-d8b2242c1d3a" style="opacity:0" class="enviro-person-block"><img src="../images/IMG_0683.JPG" width="195" alt="Photo of Aiden Mitchell" srcset="../images/IMG_0683-p-500.jpeg 500w, ../images/IMG_0683-p-800.jpeg 800w, ../images/IMG_0683-p-1080.jpeg 1080w, ../images/IMG_0683.JPG 3024w" sizes="100vw" class="image-5">
         <div class="person-name">Aiden Mitchell</div>
         <div class="person-position">Director of Information Technology</div>
       </div>
-      <div id="w-node-36c834fc13b4-eba87b26" data-w-id="eee63e27-3ce6-65ea-bff0-36c834fc13b4" style="opacity:0" class="enviro-person-block"><img src="../images/IMG_0683.JPG" width="195" alt="Photo of Aiden Mitchell" srcset="../images/IMG_0683-p-500.jpeg 500w, ../images/IMG_0683-p-800.jpeg 800w, ../images/IMG_0683-p-1080.jpeg 1080w, ../images/IMG_0683.JPG 3024w" sizes="(max-width: 991px) 195px, 100vw" class="image-5">
+      <div id="w-node-36c834fc13b4-eba87b26" data-w-id="eee63e27-3ce6-65ea-bff0-36c834fc13b4" style="opacity:0" class="enviro-person-block"><img src="../images/IMG_0683.JPG" width="195" alt="Photo of Aiden Mitchell" srcset="../images/IMG_0683-p-500.jpeg 500w, ../images/IMG_0683-p-800.jpeg 800w, ../images/IMG_0683-p-1080.jpeg 1080w, ../images/IMG_0683.JPG 3024w" sizes="100vw" class="image-5">
         <div class="person-name">Aiden Mitchell</div>
         <div class="person-position">Director of Information Technology</div>
       </div>
@@ -97,7 +97,7 @@ fbq('track', 'PageView');
   </div>
   <div class="footer">
     <div class="wrap"><img src="../images/BCYC-Logo-Full.png" width="297" alt="Logo" srcset="../images/BCYC-Logo-Full-p-500.png 500w, ../images/BCYC-Logo-Full-p-800.png 800w, ../images/BCYC-Logo-Full.png 1001w" sizes="(max-width: 479px) 90vw, 297px" class="image-7">
-      <div class="footer-list"><a href="../press.html" target="_blank" class="footer-link">Press</a><a href="https://www.instagram.com/bcyouthcouncil/" target="_blank" class="footer-link">Instagram</a><a href="https://www.facebook.com/YouthCouncilBC/" target="_blank" class="footer-link">Facebook</a><a href="https://twitter.com/BCYouthCouncil" target="_blank" class="footer-link">Twitter</a></div>
+      <div class="footer-list"><a href="../press.html" target="_blank" class="footer-link">Press</a><a href="https://www.instagram.com/bcyouthcouncil/" target="_blank" class="footer-link">Instagram</a><a href="https://www.facebook.com/BCYouthCouncil" target="_blank" class="footer-link">Facebook</a><a href="https://twitter.com/BCYouthCouncil" target="_blank" class="footer-link">Twitter</a><a href="https://www.tiktok.com/@bcyouthcouncil" target="_blank" class="footer-link">Tiktok</a></div>
     </div>
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.4.1.min.220afd743d.js?site=5e30eecf2c9656b33936eb65" type="text/javascript" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
