--- a/regions/islands.html
+++ b/regions/islands.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Tue Jun 16 2020 03:19:10 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Tue Jun 23 2020 22:07:22 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5ed82f329f6d912eedbc67b0" data-wf-site="5e30eecf2c9656b33936eb65">
 <head>
   <meta charset="utf-8">
@@ -43,7 +43,7 @@
                 <div class="icon w-icon-dropdown-toggle"></div>
                 <div class="text-block">Our Campaigns</div>
               </div>
-              <nav class="dropdown-list w-dropdown-list"><a href="../campaigns/student-reps.html" class="dropdown-link w-dropdown-link">Student Reps</a><a href="../campaigns/environment.html" class="dropdown-link w-dropdown-link">Environment</a><a href="../campaigns/mental-health.html" class="dropdown-link w-dropdown-link">Mental Health</a></nav>
+              <nav class="dropdown-list w-dropdown-list"><a href="../campaigns/student-reps.html" class="dropdown-link w-dropdown-link">Student Reps</a><a href="../campaigns/environment.html" class="dropdown-link w-dropdown-link">Environment</a><a href="../campaigns/mental-health.html" class="dropdown-link w-dropdown-link">Mental Health</a><a href="../campaigns/brand-ambassadors.html" class="dropdown-link w-dropdown-link">Brand Ambassadors</a></nav>
             </div><a href="../donate.html" target="_blank" class="nav-link w-nav-link">Donate</a><a href="https://blog.bcyouthcouncil.ca" target="_blank" class="nav-link w-nav-link">Blog</a><a href="https://bcyouthcouncil.typeform.com/to/knkHje" target="_blank" class="nav-link w-nav-link">Contact Us</a></nav>
           <div class="menu-button w-nav-button">
             <div class="menu-icon w-icon-nav-menu"></div>
@@ -57,6 +57,7 @@
       <h1 class="heading-3-regions">Islands Region</h1>
     </div>
   </div>
+  <div class="region-button"><a href="https://bcyouthcouncil.typeform.com/to/O7lJOm" target="_blank" class="button w-button">Volunteer for this campaign</a><a href="https://bcyouthcouncil.typeform.com/to/QDhcNp" target="_blank" class="button-campaign w-button">Apply for membership</a></div>
   <div class="islands-people">
     <div class="w-layout-grid grid people-one">
       <div id="w-node-7260e3ddc7e8-edbc67b0" data-w-id="5e4699e7-d5b6-bed8-d4e7-7260e3ddc7e8" style="opacity:0" class="person-block-region-one"><img src="../images/1.jpg" alt="photo of Taya Lee" width="186" srcset="../images/1-p-500.jpeg 500w, ../images/1.jpg 641w" sizes="186px" class="image-5">
@@ -73,7 +74,7 @@
   </div>
   <div class="footer">
     <div class="wrap"><img src="../images/BCYC-Logo-Full.png" width="297" alt="Logo" srcset="../images/BCYC-Logo-Full-p-500.png 500w, ../images/BCYC-Logo-Full-p-800.png 800w, ../images/BCYC-Logo-Full.png 1001w" sizes="(max-width: 479px) 90vw, 297px" class="image-7">
-      <div class="footer-list"><a href="../press.html" target="_blank" class="footer-link">Press</a><a href="https://www.instagram.com/bcyouthcouncil/" target="_blank" class="footer-link">Instagram</a><a href="https://www.facebook.com/YouthCouncilBC/" target="_blank" class="footer-link">Facebook</a><a href="https://twitter.com/BCYouthCouncil" target="_blank" class="footer-link">Twitter</a></div>
+      <div class="footer-list"><a href="../press.html" target="_blank" class="footer-link">Press</a><a href="https://www.instagram.com/bcyouthcouncil/" target="_blank" class="footer-link">Instagram</a><a href="https://www.facebook.com/BCYouthCouncil" target="_blank" class="footer-link">Facebook</a><a href="https://twitter.com/BCYouthCouncil" target="_blank" class="footer-link">Twitter</a><a href="https://www.tiktok.com/@bcyouthcouncil" target="_blank" class="footer-link">Tiktok</a></div>
     </div>
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.4.1.min.220afd743d.js?site=5e30eecf2c9656b33936eb65" type="text/javascript" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
