Add webinars to mental health

--- a/campaigns/environment.html
+++ b/campaigns/environment.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Tue Jun 23 2020 22:07:22 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sun Jun 28 2020 00:39:09 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5ee3c8fd1dd92d20eba87b26" data-wf-site="5e30eecf2c9656b33936eb65">
 <head>
   <meta charset="utf-8">
@@ -69,7 +69,7 @@ fbq('track', 'PageView');
       <h1 class="heading-3-regions">Environment</h1>
     </div>
   </div>
-  <div class="campaign-people">
+  <div class="campaign-people-enviro">
     <div class="w-layout-grid environment-grid">
       <div id="w-node-d8b2242c1d29-eba87b26" data-w-id="0e705e30-0493-b78d-fdcd-d8b2242c1d29" style="opacity:0" class="enviro-person-block"><img src="../images/ezgif.com-webp-to-jpg-2.jpg" width="195" alt="photo of Diego Christiansen-Barker" class="image-5">
         <div class="person-name">Kat Seow</div>
