--- a/campaigns/mental-health.html
+++ b/campaigns/mental-health.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Tue Jun 23 2020 22:07:22 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sun Jun 28 2020 00:39:09 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5ee3ca1192b8ebb4ba136124" data-wf-site="5e30eecf2c9656b33936eb65">
 <head>
   <meta charset="utf-8">
@@ -69,6 +69,7 @@ fbq('track', 'PageView');
       <h1 class="heading-3-regions">Mental Health</h1>
     </div>
   </div>
+  <div class="section-2"><a href="https://bcyouthcouncil.typeform.com/to/O7lJOm" target="_blank" class="button w-button">Volunteer for this campaign</a><a href="https://www.instagram.com/bcyouthcouncil/channel/" target="_blank" class="button-campaign w-button">Watch our webinars</a></div>
   <div class="campaign-people">
     <div class="w-layout-grid grid people-one">
       <div id="w-node-ae0caa542ede-ba136124" data-w-id="ff622edc-2265-d0e2-2ce2-ae0caa542ede" style="opacity:0" class="person-block-region-one">
