Change Student Reps photo

--- a/campaigns/student-reps.html
+++ b/campaigns/student-reps.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Tue Jun 23 2020 22:07:22 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Mon Jun 29 2020 18:53:45 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5ed82f329f6d915073bc67b5" data-wf-site="5e30eecf2c9656b33936eb65">
 <head>
   <meta charset="utf-8">
@@ -72,7 +72,7 @@ fbq('track', 'PageView');
   <div class="section-2"><a href="https://bcyouthcouncil.typeform.com/to/O7lJOm" target="_blank" class="button w-button">Volunteer for this campaign</a><a href="https://bcyouthcouncil.typeform.com/to/frve5N" target="_blank" class="button-campaign w-button">Take our survey</a></div>
   <div class="campaign-people">
     <div class="w-layout-grid grid people-one">
-      <div id="w-node-ae0caa542ede-73bc67b5" data-w-id="ff622edc-2265-d0e2-2ce2-ae0caa542ede" style="opacity:0" class="person-block-region-one"><img src="../images/rsz_img_0014.jpg" alt="photo of Bodhi Mah" width="190" class="image-5">
+      <div id="w-node-ae0caa542ede-73bc67b5" data-w-id="ff622edc-2265-d0e2-2ce2-ae0caa542ede" style="opacity:0" class="person-block-region-one"><img src="../images/IMG_1753.JPG" alt="photo of Bodhi Mah" width="190" srcset="../images/IMG_1753.JPG 500w, ../images/IMG_1753.JPG 800w, ../images/IMG_1753.JPG 1080w, ../images/IMG_1753.JPG 1600w, ../images/IMG_1753.JPG 2000w, ../images/IMG_1753.JPG 2600w, ../images/IMG_1753.JPG 3200w, ../images/IMG_1753.JPG 3451w" sizes="190px" class="image-5">
         <div class="person-name">Ana Grace Rans Kolakovic</div>
         <div class="person-position">Coordinator of Student Reps</div>
         <div class="person-blurb">Ana Grace Rans Kolakovic is currently completing the International Baccalaureate program. She became involved with the BCYC after participating in the Summit program with Dogwood. She is currently working on the Student Reps BC campaign with many other passionate youth. You can always find Ana Grace reading a good book and listening to GD.<br></div>
