Change home page banner to Brand Ambassadors

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Tue Jun 23 2020 22:07:22 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Mon Jul 06 2020 18:01:13 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5ed82f329f6d91d134bc67a6" data-wf-site="5e30eecf2c9656b33936eb65">
 <head>
   <meta charset="utf-8">
@@ -27,7 +27,7 @@
 <body class="body">
   <div style="-webkit-transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)" class="notification-bar">
     <div class="notification-bar-container">
-      <div class="message"><a href="press.html" class="link-3">Read our statement on the Black Lives Matter movement.</a></div>
+      <div class="message"><a href="https://forms.gle/8TQMxjqxTrMwvF8X8" target="_blank" class="link-3">Apply for a Brand Ambassador position!</a></div>
     </div>
     <div data-w-id="05255e43-81b1-1859-791f-d62e489a430e" class="close-notification">×</div>
   </div>
