Adding Enviroment coordinator

--- a/campaigns/environment.html
+++ b/campaigns/environment.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Sun Jun 28 2020 00:39:09 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Tue Jul 07 2020 18:15:19 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5ee3c8fd1dd92d20eba87b26" data-wf-site="5e30eecf2c9656b33936eb65">
 <head>
   <meta charset="utf-8">
@@ -71,21 +71,10 @@ fbq('track', 'PageView');
   </div>
   <div class="campaign-people-enviro">
     <div class="w-layout-grid environment-grid">
-      <div id="w-node-d8b2242c1d29-eba87b26" data-w-id="0e705e30-0493-b78d-fdcd-d8b2242c1d29" style="opacity:0" class="enviro-person-block"><img src="../images/ezgif.com-webp-to-jpg-2.jpg" width="195" alt="photo of Diego Christiansen-Barker" class="image-5">
-        <div class="person-name">Kat Seow</div>
+      <div id="w-node-d8b2242c1d29-eba87b26" data-w-id="0e705e30-0493-b78d-fdcd-d8b2242c1d29" style="opacity:0" class="enviro-person-block"><img src="../images/unnamed.jpg" width="195" alt="photo of Diego Christiansen-Barker" srcset="../images/unnamed.jpg 500w, ../images/unnamed.jpg 800w, ../images/unnamed.jpg 1080w, ../images/unnamed.jpg 1600w, ../images/unnamed.jpg 2000w, ../images/unnamed.jpg 2486w" sizes="(max-width: 991px) 100vw, 195px" class="image-5">
+        <div class="person-name">Chidiebere Okarah</div>
         <div class="person-position">Campaign Coordinator</div>
-      </div>
-      <div id="w-node-d8b2242c1d32-eba87b26" data-w-id="0e705e30-0493-b78d-fdcd-d8b2242c1d32" style="opacity:0" class="enviro-person-block"><img src="../images/ezgif.com-webp-to-jpg.jpg" alt="photo of Fallon O&#x27;Neill" width="195" class="image-5">
-        <div class="person-name">Fallon O&#x27;Neill</div>
-        <div class="person-position">Founder</div>
-      </div>
-      <div id="w-node-d8b2242c1d3a-eba87b26" data-w-id="0e705e30-0493-b78d-fdcd-d8b2242c1d3a" style="opacity:0" class="enviro-person-block"><img src="../images/IMG_0683.JPG" width="195" alt="Photo of Aiden Mitchell" srcset="../images/IMG_0683-p-500.jpeg 500w, ../images/IMG_0683-p-800.jpeg 800w, ../images/IMG_0683-p-1080.jpeg 1080w, ../images/IMG_0683.JPG 3024w" sizes="100vw" class="image-5">
-        <div class="person-name">Aiden Mitchell</div>
-        <div class="person-position">Director of Information Technology</div>
-      </div>
-      <div id="w-node-36c834fc13b4-eba87b26" data-w-id="eee63e27-3ce6-65ea-bff0-36c834fc13b4" style="opacity:0" class="enviro-person-block"><img src="../images/IMG_0683.JPG" width="195" alt="Photo of Aiden Mitchell" srcset="../images/IMG_0683-p-500.jpeg 500w, ../images/IMG_0683-p-800.jpeg 800w, ../images/IMG_0683-p-1080.jpeg 1080w, ../images/IMG_0683.JPG 3024w" sizes="100vw" class="image-5">
-        <div class="person-name">Aiden Mitchell</div>
-        <div class="person-position">Director of Information Technology</div>
+        <div class="person-blurb">Chidiebere is excited to serve as one of the 2020/2021 Environment Campaign Coordinators! She joined BCYC to encourage youth across the lower Mainland to become more active about protecting their futures. As a lead for the Environmental campaign, she works with a team of passionate youth to brainstorm ways that we can encourage living green in and around our local community. She is currently a sophomore attending École Panorama Ridge Secondary. Aside from BCYC, she is a highly active member of the MUN community, a noted leader in her schools Science, French and Performing Arts Faculties, and a supporting voice of the Lower Mainland African population. Some of Chidi’s hobbies include reading, social activism and playing/listening to jazz music! <br></div>
       </div>
     </div>
   </div>
