Removing Islands photo

--- a/campaigns/environment.html
+++ b/campaigns/environment.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Tue Jul 07 2020 18:15:19 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Thu Jul 09 2020 21:14:04 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5ee3c8fd1dd92d20eba87b26" data-wf-site="5e30eecf2c9656b33936eb65">
 <head>
   <meta charset="utf-8">
@@ -71,7 +71,7 @@ fbq('track', 'PageView');
   </div>
   <div class="campaign-people-enviro">
     <div class="w-layout-grid environment-grid">
-      <div id="w-node-d8b2242c1d29-eba87b26" data-w-id="0e705e30-0493-b78d-fdcd-d8b2242c1d29" style="opacity:0" class="enviro-person-block"><img src="../images/unnamed.jpg" width="195" alt="photo of Diego Christiansen-Barker" srcset="../images/unnamed.jpg 500w, ../images/unnamed.jpg 800w, ../images/unnamed.jpg 1080w, ../images/unnamed.jpg 1600w, ../images/unnamed.jpg 2000w, ../images/unnamed.jpg 2486w" sizes="(max-width: 991px) 100vw, 195px" class="image-5">
+      <div id="w-node-d8b2242c1d29-eba87b26" data-w-id="0e705e30-0493-b78d-fdcd-d8b2242c1d29" style="opacity:0" class="enviro-person-block"><img src="../images/unnamed.jpg" width="195" alt="photo of Diego Christiansen-Barker" srcset="../images/unnamed-p-500.jpeg 500w, ../images/unnamed-p-800.jpeg 800w, ../images/unnamed-p-1080.jpeg 1080w, ../images/unnamed-p-1600.jpeg 1600w, ../images/unnamed-p-2000.jpeg 2000w, ../images/unnamed.jpg 2486w" sizes="(max-width: 991px) 100vw, 195px" class="image-5">
         <div class="person-name">Chidiebere Okarah</div>
         <div class="person-position">Campaign Coordinator</div>
         <div class="person-blurb">Chidiebere is excited to serve as one of the 2020/2021 Environment Campaign Coordinators! She joined BCYC to encourage youth across the lower Mainland to become more active about protecting their futures. As a lead for the Environmental campaign, she works with a team of passionate youth to brainstorm ways that we can encourage living green in and around our local community. She is currently a sophomore attending École Panorama Ridge Secondary. Aside from BCYC, she is a highly active member of the MUN community, a noted leader in her schools Science, French and Performing Arts Faculties, and a supporting voice of the Lower Mainland African population. Some of Chidi’s hobbies include reading, social activism and playing/listening to jazz music! <br></div>
