Removing Brand Ambassador applications

--- a/campaigns/brand-ambassadors.html
+++ b/campaigns/brand-ambassadors.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Tue Jun 23 2020 22:07:22 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sat Jul 11 2020 17:12:44 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5ef27bd21865ed48659688b9" data-wf-site="5e30eecf2c9656b33936eb65">
 <head>
   <meta charset="utf-8">
@@ -69,7 +69,9 @@ fbq('track', 'PageView');
       <h1 class="heading-3-regions">Brand Ambassadors</h1>
     </div>
   </div>
-  <div class="ba-applications"><a href="https://forms.gle/8TQMxjqxTrMwvF8X8" target="_blank" class="button-campaign w-button">Apply to become a Brand Ambassador</a></div>
+  <div class="ba-applications">
+    <div class="text-block-2">Brand Ambassador applications are closed. Stay tuned on our social media for updates!</div>
+  </div>
   <div id="about" class="section wide img">
     <div data-w-id="b126983d-9126-fc06-c81d-1318685e2add" class="wrap">
       <h2 class="heading-4"><strong class="bold-text">Interested in joining BCYC? Interested in creating change and helping those around you? Well, BC Youth Council (BCYC) sounds like the perfect fit. <br>‍<br>We are looking for BC youth (14-24) who are passionate, positive, professional, connected, and highly active on their own personal social media accounts and willing to share BCYC content. <br><br>As an ambassador, you are representing BCYC and helping expand our engagement and audience through spreading our content on social media and around your community. We would love your help in continuing to make an impact!</strong></h2>
