Removing application buttons

--- a/regions/islands.html
+++ b/regions/islands.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Thu Jul 09 2020 21:14:04 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sun Jul 12 2020 00:15:18 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5ed82f329f6d912eedbc67b0" data-wf-site="5e30eecf2c9656b33936eb65">
 <head>
   <meta charset="utf-8">
@@ -57,7 +57,7 @@
       <h1 class="heading-3-regions">Islands Region</h1>
     </div>
   </div>
-  <div class="region-button"><a href="https://bcyouthcouncil.typeform.com/to/O7lJOm" target="_blank" class="button w-button">Volunteer for this campaign</a><a href="https://bcyouthcouncil.typeform.com/to/QDhcNp" target="_blank" class="button-campaign w-button">Apply for membership</a></div>
+  <div class="islands-button"><a href="https://bcyouthcouncil.typeform.com/to/O7lJOm" target="_blank" class="button w-button">Volunteer for this campaign</a><a href="https://bcyouthcouncil.typeform.com/to/QDhcNp" target="_blank" class="button-campaign w-button">Apply for membership</a></div>
   <div class="islands-people">
     <div class="w-layout-grid grid people-one">
       <div id="w-node-7260e3ddc7e8-edbc67b0" data-w-id="5e4699e7-d5b6-bed8-d4e7-7260e3ddc7e8" style="opacity:0" class="person-block-region-one"><img src="../images/1.jpg" alt="photo of Taya Lee" width="186" srcset="../images/1-p-500.jpeg 500w, ../images/1.jpg 641w" sizes="100vw" class="image-5">
