--- a/regions/southern-interior.html
+++ b/regions/southern-interior.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Tue Jun 23 2020 22:07:22 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sun Jul 12 2020 00:15:18 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5ed82f329f6d911366bc67b8" data-wf-site="5e30eecf2c9656b33936eb65">
 <head>
   <meta charset="utf-8">
@@ -57,7 +57,7 @@
       <h1 class="heading-3-regions">Southern Interior Region</h1>
     </div>
   </div>
-  <div class="region-button"><a href="https://bcyouthcouncil.typeform.com/to/O7lJOm" target="_blank" class="button w-button">Volunteer for this campaign</a><a href="https://bcyouthcouncil.typeform.com/to/QDhcNp" target="_blank" class="button-campaign w-button">Apply for membership</a></div>
+  <div class="si-region-button"><a href="https://bcyouthcouncil.typeform.com/to/O7lJOm" target="_blank" class="button w-button">Volunteer for this campaign</a><a href="https://bcyouthcouncil.typeform.com/to/QDhcNp" target="_blank" class="button-campaign w-button">Apply for membership</a></div>
   <div class="southern-interior-people">
     <div class="w-layout-grid grid people-one">
       <div id="w-node-e34b7cfd1f8f-66bc67b8" data-w-id="aa75bba4-fef1-e6c4-cadf-e34b7cfd1f8f" style="opacity:0" class="person-block-region-one"><img src="../images/IMG_20191104_183337_675.jpg" alt="photo of Simon Larocque" width="186" class="image-5">
