Fixing Mental Health typo

--- a/campaigns/mental-health.html
+++ b/campaigns/mental-health.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Sun Jun 28 2020 00:39:09 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sun Jul 12 2020 00:21:47 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5ee3ca1192b8ebb4ba136124" data-wf-site="5e30eecf2c9656b33936eb65">
 <head>
   <meta charset="utf-8">
@@ -80,7 +80,7 @@ fbq('track', 'PageView');
   </div>
   <div id="about" class="section wide img">
     <div data-w-id="b126983d-9126-fc06-c81d-1318685e2add" class="wrap">
-      <h2 class="heading-4"><strong class="bold-text">The Mental Health Campaign first involved spreading awareness about mental health, and ways for people to prioritize and generate their own happiness. Later, they moved on to  focusing on providing mental health guest speakers to join us on webinars every two weeks, to impart their wisdom. currently, Sanjana sending proposals to politicians and schools to see if there is an opportunity for further implementation of mental health exercises. It is important for students to replenish their mind and body, and that is why this campaign is important to BCYC.</strong></h2>
+      <h2 class="heading-4"><strong class="bold-text">The Mental Health Campaign first involved spreading awareness about mental health, and ways for people to prioritize and generate their own happiness. Later, they moved on to  focusing on providing mental health guest speakers to join us on webinars every two weeks, to impart their wisdom. Currently, Sanjana sending proposals to politicians and schools to see if there is an opportunity for further implementation of mental health exercises. It is important for students to replenish their mind and body, and that is why this campaign is important to BCYC.</strong></h2>
     </div>
     <div class="wrapper"></div>
   </div>
