Adding LinkedIn link

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Mon Jul 06 2020 18:01:13 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Thu Jul 16 2020 20:33:21 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5ed82f329f6d91d134bc67a6" data-wf-site="5e30eecf2c9656b33936eb65">
 <head>
   <meta charset="utf-8">
@@ -72,7 +72,7 @@
   </div>
   <div class="footer">
     <div class="wrap"><img src="images/BCYC-Logo-Full.png" width="297" alt="Logo" srcset="images/BCYC-Logo-Full-p-500.png 500w, images/BCYC-Logo-Full-p-800.png 800w, images/BCYC-Logo-Full.png 1001w" sizes="(max-width: 479px) 90vw, 297px" class="image-7">
-      <div class="footer-list"><a href="press.html" target="_blank" class="footer-link">Press</a><a href="https://www.instagram.com/bcyouthcouncil/" target="_blank" class="footer-link">Instagram</a><a href="https://www.facebook.com/BCYouthCouncil" target="_blank" class="footer-link">Facebook</a><a href="https://twitter.com/BCYouthCouncil" target="_blank" class="footer-link">Twitter</a><a href="https://www.tiktok.com/@bcyouthcouncil" target="_blank" class="footer-link">Tiktok</a></div>
+      <div class="footer-list"><a href="press.html" target="_blank" class="footer-link">Press</a><a href="https://www.instagram.com/bcyouthcouncil/" target="_blank" class="footer-link">Instagram</a><a href="https://www.linkedin.com/company/bc-youth-council/" target="_blank" class="footer-link">LinkedIn</a><a href="https://www.facebook.com/BCYouthCouncil" target="_blank" class="footer-link">Facebook</a><a href="https://twitter.com/BCYouthCouncil" target="_blank" class="footer-link">Twitter</a><a href="https://www.tiktok.com/@bcyouthcouncil" target="_blank" class="footer-link">Tiktok</a></div>
     </div>
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.4.1.min.220afd743d.js?site=5e30eecf2c9656b33936eb65" type="text/javascript" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
