--- a/campaigns/student-reps.html
+++ b/campaigns/student-reps.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Thu Jul 16 2020 20:33:21 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sat Aug 08 2020 03:22:48 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5ed82f329f6d915073bc67b5" data-wf-site="5e30eecf2c9656b33936eb65">
 <head>
   <meta charset="utf-8">
@@ -18,6 +18,17 @@
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="../images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="../images/webclip.png" rel="apple-touch-icon">
+  <!--  Hotjar Tracking Code for bcyouthcouncil.ca  -->
+  <script>
+    (function(h,o,t,j,a,r){
+        h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+        h._hjSettings={hjid:1931776,hjsv:6};
+        a=o.getElementsByTagName('head')[0];
+        r=o.createElement('script');r.async=1;
+        r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+        a.appendChild(r);
+    })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+</script>
   <!--  Facebook Pixel Code  -->
   <script>
 !function(f,b,e,v,n,t,s)
@@ -69,7 +80,7 @@ fbq('track', 'PageView');
       <h1 class="heading-3-regions">Student Reps</h1>
     </div>
   </div>
-  <div class="section-2"><a href="https://bcyouthcouncil.typeform.com/to/O7lJOm" target="_blank" class="button w-button">Volunteer for this campaign</a><a href="https://forms.gle/pnmbfCGWYUxqWbyD6" target="_blank" class="button-campaign w-button">Take our survey</a></div>
+  <div class="section-2"><a href="https://bcyouthcouncil.typeform.com/to/O7lJOm" target="_blank" class="button w-button">Volunteer for this campaign</a><a href="https://bcyouthcouncil.typeform.com/to/frve5N" target="_blank" class="button-campaign w-button">Take our survey</a></div>
   <div class="campaign-people">
     <div class="w-layout-grid grid people-one">
       <div id="w-node-ae0caa542ede-73bc67b5" data-w-id="ff622edc-2265-d0e2-2ce2-ae0caa542ede" style="opacity:0" class="person-block-region-one"><img src="../images/IMG_1753.JPG" alt="photo of Bodhi Mah" width="190" srcset="../images/IMG_1753-p-500.jpeg 500w, ../images/IMG_1753-p-800.jpeg 800w, ../images/IMG_1753-p-1080.jpeg 1080w, ../images/IMG_1753-p-1600.jpeg 1600w, ../images/IMG_1753-p-2000.jpeg 2000w, ../images/IMG_1753-p-2600.jpeg 2600w, ../images/IMG_1753-p-3200.jpeg 3200w, ../images/IMG_1753.JPG 3451w" sizes="190px" class="image-5">
