--- a/campaigns/student-reps.html
+++ b/campaigns/student-reps.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Sat Aug 08 2020 03:22:48 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Wed Aug 12 2020 00:00:34 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5ed82f329f6d915073bc67b5" data-wf-site="5e30eecf2c9656b33936eb65">
 <head>
   <meta charset="utf-8">
@@ -86,7 +86,7 @@ fbq('track', 'PageView');
       <div id="w-node-ae0caa542ede-73bc67b5" data-w-id="ff622edc-2265-d0e2-2ce2-ae0caa542ede" style="opacity:0" class="person-block-region-one"><img src="../images/IMG_1753.JPG" alt="photo of Bodhi Mah" width="190" srcset="../images/IMG_1753-p-500.jpeg 500w, ../images/IMG_1753-p-800.jpeg 800w, ../images/IMG_1753-p-1080.jpeg 1080w, ../images/IMG_1753-p-1600.jpeg 1600w, ../images/IMG_1753-p-2000.jpeg 2000w, ../images/IMG_1753-p-2600.jpeg 2600w, ../images/IMG_1753-p-3200.jpeg 3200w, ../images/IMG_1753.JPG 3451w" sizes="190px" class="image-5">
         <div class="person-name">Ana Grace Rans Kolakovic</div>
         <div class="person-position">Coordinator of Student Reps</div>
-        <div class="person-blurb">Ana Grace Rans Kolakovic is currently completing the International Baccalaureate program. She became involved with the BCYC after participating in the Summit program with Dogwood. She is currently working on the Student Reps BC campaign with many other passionate youth. You can always find Ana Grace reading a good book and listening to GD.<br></div>
+        <div class="person-blurb">Ana Grace Rans Kolakovic is currently completing the International Baccalaureate program. During her time as a student representative at the Vancouver District Student Council, she learned about student trustees and the power of accurate student representation. Since then, Ana Grace has had a passion for student issues and the importance of accurate student representation. After creating the Student Reps campaign during the Summit program with Dogwood, she joined the British Columbia Youth Council (BCYC). She loves working with other passionate and hard-working youth. You can always find Ana Grace reading a good book and listening to GD.<br></div>
       </div>
     </div>
   </div>
