Adding home page animations

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Sun Aug 16 2020 02:41:06 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sun Aug 16 2020 17:07:49 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5ed82f329f6d91d134bc67a6" data-wf-site="5e30eecf2c9656b33936eb65">
 <head>
   <meta charset="utf-8">
@@ -78,11 +78,29 @@
       <h3 class="hero-subhead">Empower. Project. Create.</h3><a href="donate.html" class="buttondonate w-button">Donate (coming soon)</a><a href="https://eepurl.com/g5ASgn" target="_blank" class="signupbutton w-button">Sign up for our email list</a></div>
   </div>
   <div id="about" class="section wide img">
-    <div data-w-id="b126983d-9126-fc06-c81d-1318685e2add" style="-webkit-transform:translate3d(0, 40PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 40PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 40PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 40PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="wrap">
+    <div data-w-id="b126983d-9126-fc06-c81d-1318685e2add" class="wrap">
       <div class="title">about us</div>
       <h2 class="heading-4"><strong class="bold-text">The BC Youth Council is a network of youth aged 14-24 from across British Columbia that provides a platform for change across the province. This change is achieved through working closely with politicians and community organizations, sharing voices with other youth, and making differences both provincially and locally.</strong></h2>
     </div>
-    <div class="wrapper"></div>
+  </div>
+  <div id="about" class="campaignshome wide img">
+    <div class="wrap">
+      <div class="title">Our campaigns</div>
+      <div class="w-layout-grid grid-2">
+        <div id="w-node-99405f396397-34bc67a6" class="div-block-2">
+          <div data-w-id="82fcebbf-ee6c-f876-c654-d6e959f96472" data-animation-type="lottie" data-src="documents/24239-pride-rainbow-heart-collision.json" data-loop="1" data-direction="1" data-autoplay="1" data-is-ix2-target="0" data-renderer="svg" data-default-duration="6" data-duration="0" class="lgbtq-animation"></div>
+          <div class="text-block-4">LGBTQ+ Rights</div>
+        </div>
+        <div id="w-node-58b7cf0cfe8b-34bc67a6" class="div-block-2">
+          <div data-w-id="24501496-2fc8-1977-4604-58b7cf0cfe8c" data-animation-type="lottie" data-src="documents/lf30_editor_7qG4LR.json" data-loop="1" data-direction="1" data-autoplay="1" data-is-ix2-target="0" data-renderer="svg" data-default-duration="2.035368619133107" data-duration="0" class="enviroanimation"></div>
+          <div class="text-block-4">Environmental</div>
+        </div>
+        <div id="w-node-d24187e081f9-34bc67a6" class="div-block-2">
+          <div data-w-id="8e339157-5f16-7a9a-0848-d24187e081fa" data-animation-type="lottie" data-src="documents/21270-student.json" data-loop="1" data-direction="1" data-autoplay="1" data-is-ix2-target="0" data-renderer="svg" data-default-duration="3" data-duration="0" class="studentanimation"></div>
+          <div class="text-block-4">Student Reps</div>
+        </div>
+      </div>
+    </div>
   </div>
   <div class="footer">
     <div class="wrap"><img src="images/BCYC-Logo-Full.png" width="297" alt="Logo" srcset="images/BCYC-Logo-Full-p-500.png 500w, images/BCYC-Logo-Full-p-800.png 800w, images/BCYC-Logo-Full.png 1001w" sizes="(max-width: 479px) 90vw, 297px" class="image-7">
