Adding Feedback banner

--- a/press.html
+++ b/press.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Sun Aug 16 2020 02:41:06 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sun Aug 16 2020 20:52:14 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5ee3c3965baa430ac99dd1e1" data-wf-site="5e30eecf2c9656b33936eb65">
 <head>
   <meta charset="utf-8">
@@ -73,7 +73,7 @@
   </div>
   <div class="w-layout-grid pressgrid">
     <div id="w-node-5696a71da7ab-c99dd1e1" data-w-id="151a7b28-a87e-57d5-62cc-5696a71da7ab" class="press-block">
-      <div class="presstext"><a href="documents/BCYC-Black-Lives-Matter-statement.pdf" target="_blank">June 4th 2020 - Statement on the Black Lives Matter movement</a></div>
+      <div class="presstext">No current press releases.</div>
     </div>
   </div>
   <div class="footer">
