--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Sun Aug 16 2020 02:41:06 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sun Aug 16 2020 20:52:14 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5ed82f329f6d91d134bc67a6" data-wf-site="5e30eecf2c9656b33936eb65">
 <head>
   <meta charset="utf-8">
@@ -41,7 +41,7 @@
 <body class="body">
   <div style="-webkit-transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)" class="notification-bar">
     <div class="notification-bar-container">
-      <div class="message"><a href="https://forms.gle/8TQMxjqxTrMwvF8X8" target="_blank" class="link-3">Apply for a Brand Ambassador position!</a></div>
+      <div class="message"><a href="https://docs.google.com/forms/d/e/1FAIpQLSeZUH6pUh-hl17-JZM2GWSpew_ZVRNg_i5Zsw-H-jxmG6SAeA/viewform?usp=sf_link" target="_blank" class="link-3">Suggest changes to our website!</a></div>
     </div>
     <div data-w-id="05255e43-81b1-1859-791f-d62e489a430e" class="close-notification">×</div>
   </div>
@@ -78,11 +78,10 @@
       <h3 class="hero-subhead">Empower. Project. Create.</h3><a href="donate.html" class="buttondonate w-button">Donate (coming soon)</a><a href="https://eepurl.com/g5ASgn" target="_blank" class="signupbutton w-button">Sign up for our email list</a></div>
   </div>
   <div id="about" class="section wide img">
-    <div data-w-id="b126983d-9126-fc06-c81d-1318685e2add" style="-webkit-transform:translate3d(0, 40PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 40PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 40PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 40PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="wrap">
+    <div data-w-id="b126983d-9126-fc06-c81d-1318685e2add" class="wrap">
       <div class="title">about us</div>
       <h2 class="heading-4"><strong class="bold-text">The BC Youth Council is a network of youth aged 14-24 from across British Columbia that provides a platform for change across the province. This change is achieved through working closely with politicians and community organizations, sharing voices with other youth, and making differences both provincially and locally.</strong></h2>
     </div>
-    <div class="wrapper"></div>
   </div>
   <div class="footer">
     <div class="wrap"><img src="images/BCYC-Logo-Full.png" width="297" alt="Logo" srcset="images/BCYC-Logo-Full-p-500.png 500w, images/BCYC-Logo-Full-p-800.png 800w, images/BCYC-Logo-Full.png 1001w" sizes="(max-width: 479px) 90vw, 297px" class="image-7">
