--- a/campaigns/student-reps.html
+++ b/campaigns/student-reps.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Sun Aug 16 2020 02:41:06 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Mon Aug 24 2020 19:44:59 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5ed82f329f6d915073bc67b5" data-wf-site="5e30eecf2c9656b33936eb65">
 <head>
   <meta charset="utf-8">
@@ -95,7 +95,7 @@ fbq('track', 'PageView');
   </div>
   <div id="about" class="section wide img">
     <div data-w-id="b126983d-9126-fc06-c81d-1318685e2add" class="wrap">
-      <h2 class="heading-4"><strong class="bold-text">Student trustees are elected officials that actively advocate for student voice. Student trustees are elected by the students within the school board to ensure proper communication of student issues and opinions. They are active participants in board meetings and may offer suggestions or motions (dependent on school board). The student reps campaign goal is to bring official student voice into the education system, at the district level. We are aiming to have a student representative in each school district within 2 years.</strong></h2>
+      <h2 class="heading-4">What is the Student Reps B.C. campaign?<strong class="bold-text"> Student Reps B.C. is a campaign that aims to have accurate student representation in every British Columbian school district. We aim to reach our goal by talking with politicians, such as MLAs, school board trustees, and district staff. We want to talk about the importance of student trustees and the issue of student representation in British Columbia.<br><br></strong>What are student trustees?<strong class="bold-text"> Student trustees are elected officials that actively advocate for student&#x27;s voice. Student trustees are elected by the students within the school board to ensure proper communication of student issues and opinions. They are active participants in board meetings and may offer suggestions or motions (dependent on school board). </strong></h2>
     </div>
     <div class="wrapper"></div>
   </div>
@@ -104,7 +104,7 @@ fbq('track', 'PageView');
       <div class="footer-list"><a href="../press.html" target="_blank" class="footer-link">Press</a><a href="https://www.instagram.com/bcyouthcouncil/" target="_blank" class="footer-link">Instagram</a><a href="https://www.linkedin.com/company/bc-youth-council/" target="_blank" class="footer-link">LinkedIn</a><a href="https://www.facebook.com/BCYouthCouncil" target="_blank" class="footer-link">Facebook</a><a href="https://twitter.com/BCYouthCouncil" target="_blank" class="footer-link">Twitter</a><a href="https://www.tiktok.com/@bcyouthcouncil" target="_blank" class="footer-link">Tiktok</a></div>
     </div>
   </div>
-  <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.4.1.min.220afd743d.js?site=5e30eecf2c9656b33936eb65" type="text/javascript" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+  <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=5e30eecf2c9656b33936eb65" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="../js/webflow.js" type="text/javascript"></script>
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
 </body>
