Adding Google Adsense code

--- a/regions/islands.html
+++ b/regions/islands.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Mon Aug 24 2020 19:44:59 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Thu Aug 27 2020 21:16:50 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5ed82f329f6d912eedbc67b0" data-wf-site="5e30eecf2c9656b33936eb65">
 <head>
   <meta charset="utf-8">
@@ -37,6 +37,7 @@
         a.appendChild(r);
     })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
 </script>
+  <script data-ad-client="ca-pub-9165674550154218" async="" src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body class="body">
   <div class="hero">
