--- a/donate.html
+++ b/donate.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Mon Aug 24 2020 19:44:59 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Thu Aug 27 2020 21:16:50 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5ed82f329f6d9142a5bc67b6" data-wf-site="5e30eecf2c9656b33936eb65">
 <head>
   <meta charset="utf-8">
@@ -32,6 +32,7 @@
         a.appendChild(r);
     })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
 </script>
+  <script data-ad-client="ca-pub-9165674550154218" async="" src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   <!--  Facebook Pixel Code  -->
   <script>
 !function(f,b,e,v,n,t,s)
